--- a/News/News/Properties/launchSettings.json
+++ b/News/News/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production" //Development
+        "ASPNETCORE_ENVIRONMENT": "Development" //Development Production
       }
     },
     "News": {
